tests/netperf/droplets/udp_075/outgoing.txt
freebsd@lefty ~> netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C~freebsd@lefty ~>


freebsd@lefty ~/i/ipfwd> ./ipfwd 1 0.0
[ipfwd] starting
current:  71.826%, error:  71.8%, probability:  0.000%
current:  66.064%, error:  5.8%, probability:  0.000%
current:  60.742%, error:  5.3%, probability:  0.000%
current:  63.867%, error:  3.1%, probability:  0.000%
current:  58.740%, error:  5.1%, probability:  0.000%
current:  54.004%, error:  4.7%, probability:  0.000%
current:  57.666%, error:  3.7%, probability:  0.000%
current:  53.027%, error:  4.6%, probability:  0.000%
current:  56.787%, error:  3.8%, probability:  0.000%
current:  60.205%, error:  3.4%, probability:  0.000%
current:  55.371%, error:  4.8%, probability:  0.000%
current:  58.936%, error:  3.6%, probability:  0.000%
current:  54.199%, error:  4.7%, probability:  0.000%
current:  49.854%, error:  4.3%, probability:  0.000%
current:  53.857%, error:  4.0%, probability:  0.000%
current:  49.512%, error:  4.3%, probability:  0.000%
^C~freebsd@lefty ~/i/ipfwd>


freebsd@righty ~/i/ipfwd> ./ipfwd 1 0.0
[ipfwd] starting
current:  73.779%, error:  73.8%, probability:  0.000%
^C~freebsd@righty ~/i/ipfwd> netperf -l 60 -t UDP_STREAM -H 10.138.160.119
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 10.138.160.119 () port 0 AF_INET : histogram : interval : dirty data : demo
Socket  Message  Elapsed      Messages
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

  9216    9216   60.00     2328906 3208921    2861.75
 42080           60.00           0              0.00

freebsd@righty ~/i/ipfwd>


freebsd@righty ~/i/ipfwd> sudo ./ipfwd 1 0.5
[ipfwd] starting
current:  62.842%, error:  62.8%, probability:  0.500%
^C~freebsd@righty ~/i/ipfwd> sudo ./ipfwd 1 0.75
[ipfwd] starting
current:  62.842%, error:  62.8%, probability:  0.750%
current:  73.779%, error:  51.9%, probability:  0.750%
current:  75.879%, error:  2.1%, probability:  0.750%
current:  77.783%, error:  1.9%, probability:  0.750%
current:  79.541%, error:  1.8%, probability:  0.750%
current:  81.152%, error:  1.6%, probability:  0.750%
current:  82.617%, error:  1.5%, probability:  0.750%
current:  83.984%, error:  1.4%, probability:  0.750%
current:  85.254%, error:  1.3%, probability:  0.750%
current:  86.426%, error:  1.2%, probability:  0.750%
current:  87.500%, error:  1.1%, probability:  0.750%
current:  88.477%, error:  1.0%, probability:  0.750%
current:  89.355%, error:  0.9%, probability:  0.750%
current:  90.186%, error:  0.8%, probability:  0.750%
current:  98.975%, error:  8.8%, probability:  0.750%
^C~freebsd@righty ~/i/ipfwd>


freebsd@righty ~/i/bin> bash cpu_usage.sh netperf
^C
11.4 15.8 18.7 23.4 25.4 29.8 31.4 35.8 36.9 41.6 42.4 46.8 47.2 52.1 52.1 56.8 55.9 60.5 59.3 63.9 62.6 61.0 65.6 63.9 68.3 66.2 70.6 68.4 73.0 70.6 75.1 72.5 77.1 74.3 78.8 76.0 80.5 77.6 82.1 78.9 83.4 80.3 85.2 82.3 87.1 83.6 88.3 84.7 89.3 85.6 90.2 86.4 82.6 87.2 83.3 87.8 84.1 88.7 84.8 89.3 85.4 89.9 86.0 90.6 86.8 91.3 87.4 91.9 88.0 92.7 88.7 93.1 89.0 93.7 89.6 94.1 89.9 94.5 90.4 86.2 90.8 86.7 91.2 87.4 91.8 87.892.2 88.0 92.4 88.3 92.7 88.7 93.2 89.0 93.5 89.2 93.8 89.7 94.3 90.1 94.7 90.6 95.2 90.9 95.5 91.2 87.1 91.6 87.6 92.1 88.0 92.6 88.7 93.3 83.0 83.0 74.5 74.5 66.9 66.9 60.2 60.2 54.1 54.1 48.5 48.5 43.7 43.7 39.2 39.2 35.1
average: 75.0298
freebsd@righty ~/i/bin>
